@@ -2331,8 +2331,8 @@ class MySQLTableDefinitionParser(object):
               r'(?:\x27(?:\x27\x27|[^\x27])*\x27,?)+))\))?'
             r'(?: +(?P<unsigned>UNSIGNED))?'
             r'(?: +(?P<zerofill>ZEROFILL))?'
-            r'(?: +CHARACTER SET +(?P<charset>\w+))?'
-            r'(?: +COLLATE +(P<collate>\w+))?'
+            r'(?: +CHARACTER SET +(?P<charset>[\w_]+))?'
+            r'(?: +COLLATE +(?P<collate>[\w_]+))?'
             r'(?: +(?P<notnull>NOT NULL))?'
             r'(?: +DEFAULT +(?P<default>'
               r'(?:NULL|\x27(?:\x27\x27|[^\x27])*\x27|\w+)'
