@@ -49,6 +49,11 @@ CHANGES
     not part of the FunctionElement base class, allowing 
     a "type" to be handled in a custom constructor or 
     class-level variable.
+
+- mysql
+  - Fixed reflection bug whereby when COLLATE was present, 
+    nullable flag and server defaults would not be reflected.
+    [ticket:1655]
     
 - mssql
   - Re-established initial support for pymssql.
